# sercd

./: .cvsignore  ChangeLog  Makefile  Makefile.am  README  TODO  configure.in  indent-all  sercd.8  sercd.c  sercd.h  unix.c  win.c  win.h
CVSROOT/: loginfo
sercd/: .cvsignore  AUTHORS  Makefile.am  README  configure.in  indent-all  rfc2217-updated.txt  sercd.8  sercd.c  sercd.h  sredird-2.2.0.lsm  sredird.c  unix.c  unix.h  win.c  win.h
