
AC_INIT(sercd.c)
AM_INIT_AUTOMAKE(sercd, 2.3.2)
AC_PROG_CC 
AC_CANONICAL_HOST

os_is_win32=0
case "$host_os" in
        mingw*)
        AC_DEFINE([OS_IS_WIN32], 1, [Build target is Windows.])
        os_is_win32=1
                ;;
esac
AM_CONDITIONAL(OS_IS_WIN32, test "x$os_is_win32" = "x1")

AC_OUTPUT(Makefile)
